<resources>
    <string name="app_name">Smarclock</string>
    <string name="alarms">Alarms</string>
    <string name="active_alarm">Active Alarm</string>
    <string name="saved_alarm">Saved Alarms</string>
    <string name="btn_add">Add</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="btn_save_alarm">Save</string>
    <string name="repeat">Repeat</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate_alarm_sound">Vibrate alarm sounds</string>
    <string name="delete_after_off">Delete after off</string>
    <string name="title">Title</string>
    <string name="choose_a_game">Choose your wake up game</string>
    <string name="set_alarm_title">Alarm Title</string>
    <string name="save_title">Save Title</string>
    <string name="start_a_game">Start a Game</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="check">Check</string>
    <string name="solve">Solve</string>
    <string name="type">Type</string>
    <string name="isON">Status</string>



    //game layout text
    <string name="choose_game">Choose a game:</string>
    <string name="equation">Equation</string>
    <string name="memory">Memory</string>
    <string name="type_password">Type Password</string>
    <string name="shape_sequence">Shape Sequence</string>


    //game leve layout text
    <string name="equation_level">Equation level</string>
    <string name="memory_level">Memory level</string>
    <string name="type_password_level">Type password level</string>
    <string name="shape_sequence_level">Shape sequence level</string>
    <string name="btn_add_to_alarm">Add to alarm</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="try_it">Try it</string>



    <string name="memorize">Memorize</string>

</resources>
