<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fjln1920.Home">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/alarm_card"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/alarm_card_blue"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="14dp"
                        android:src="@null"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:text="@string/Alarms"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:fontFamily="@font/museo"
                        android:layout_marginTop="15dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorGrayLight"
                        android:text="@string/active_alarm"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:fontFamily="@font/museo"/>





                </LinearLayout>


                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:src="@drawable/ic_z"
                    android:layout_marginEnd="40dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/colorGray"
                        android:fontFamily="@font/museo"
                        android:text="@string/saved_alarm"
                        android:layout_weight="1"/>

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="17dp"
                        android:src="@drawable/ic_list_type"
                        android:layout_gravity="center"
                        android:layout_marginEnd="15dp"
                        />
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/alarms_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" />

            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/home_add_ala"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:background="@drawable/add_btb_shape"
        android:fontFamily="@font/museo"
        android:text="@string/btn_add"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>